--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <body>
 
+
     <div class="header">
       <img src="./resources/media/img-tea-cozy-logo.png"/>
       <nav>
@@ -17,6 +18,9 @@
         </ul>
       </nav>
     </div>
+
+   <div class="container">
+
 
     <div class="main">
       <div id="mission">
@@ -82,5 +86,8 @@
       </div>
     </div>
 
+
+
+  </div>
   </body>
 </html>
