--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="main">
       <div id="mission">
         <h2>Our Mission</h2>
-        <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
-        Fair Trade, Organic Tea</p>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+        Fair Trade, Organic Tea</h4>
       </div>
     </div>
 
