--- a/index.html
+++ b/index.html
@@ -31,27 +31,33 @@
     </div>
 
     <div class="month">
-      <h2>Tea of the Month</h2>
-      <p>What's Seeping at The Tea Cozy?</p>
-      <div class="tea">
-        <img src="./resources/media/img-berryblitz.jpg"/>
-        <h3>Fall Berry Blitz Tea</h3>
+      <div>
+        <h2>Tea of the Month</h2>
+        <p>What's Seeping at The Tea Cozy?</p>
       </div>
-      <div class="tea">
-        <img src="./resources/media/img-spiced-rum.jpg"/>
-        <h3>Spiced Rum Tea</h3>
-      </div>
-      <div class="tea">
-        <img src="./resources/media/img-donut.jpg"/>
-        <h3>Seasonal Donuts</h3>
-      </div>
-      <div class="tea">
-        <img src="./resources/media/img-myrtle-ave.jpg"/>
-        <h3>Myrtle Ave Tea</h3>
-      </div>
-      <div class="tea">
-        <img src="./resources/media/img-bedford-bizarre.jpg"/>
-        <h3>Bedford Bizarre Tea</h3>
+      <div class="teas">
+        <div class="tea">
+          <img src="./resources/media/img-berryblitz.jpg"/>
+          <h3>Fall Berry Blitz Tea</h3>
+        </div>
+        <div class="tea">
+          <img src="./resources/media/img-spiced-rum.jpg"/>
+          <h3>Spiced Rum Tea</h3>
+        </div>
+        <div class="tea">
+          <img src="./resources/media/img-donut.jpg"/>
+          <h3>Seasonal Donuts</h3>
+        </div>
+        <div class="row2">
+          <div class="tea">
+            <img src="./resources/media/img-myrtle-ave.jpg"/>
+            <h3>Myrtle Ave Tea</h3>
+          </div>
+          <div class="tea">
+            <img src="./resources/media/img-bedford-bizarre.jpg"/>
+            <h3>Bedford Bizarre Tea</h3>
+          </div>
+        </div>
       </div>
     </div>
 
