--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="month">
+
       <div>
         <h2>Tea of the Month</h2>
         <p>What's Seeping at The Tea Cozy?</p>
@@ -58,37 +58,38 @@
             <h3>Bedford Bizarre Tea</h3>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="locations">
-      <h2>Locations</h2>
-      <div class=".location">
-        <h3>Downtown</h3>
-        <p>384 West 4th St</p>
-        <p>Suite 108</p>
-        <p>Portland, Maine</p>
-      </div>
-      <div class=".location">
-        <h3>East Bayside</h3>
-        <p>3433 Phisherman's Avenue</p>
-        <p>(Northwest Corner)</p>
-        <p>Portland, Maine</p>
-      </div>
-      <div class=".location">
-        <h3>Oakdale</h3>
-        <p>515 Crescent Avenue</p>
-        <p>Second Floor</p>
-        <p>Portland, Maine</p>
-      </div>
-    </div>
+
+       <div class="image">
+          <h2>Locations</h2>
+          <div class="locations">
+            <div class="location">
+              <h3>Downtown</h3>
+              <p>384 West 4th St</p>
+              <p>Suite 108</p>
+              <p>Portland, Maine</p>
+            </div>
+            <div class="location">
+              <h3>East Bayside</h3>
+              <p>3433 Phisherman's Avenue</p>
+              <p>(Northwest Corner)</p>
+              <p>Portland, Maine</p>
+            </div>
+            <div class="location">
+              <h3>Oakdale</h3>
+              <p>515 Crescent Avenue</p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
+            </div>
+          </div>
+        </div>
 
     <div class=".footer">
       <h2>The Tea Cozy</h2>
       <p>contact@theteacozy.com</p>
       <p>917-555-8904</p>
       <div id="copyright">
-        <p>copyright The Tea Cozy 2017</p>
+        <h5>copyright The Tea Cozy 2017</h5>
       </div>
     </div>
 
