finish positioning footer and make links function

--- a/index.html
+++ b/index.html
@@ -12,89 +12,89 @@
       <img src="./resources/media/img-tea-cozy-logo.png"/>
       <nav>
         <ul>
-          <a href="#"><li>Mission</li></a>
-          <a href="#"><li>Featured Tea</li></a>
-          <a href="#"><li>Locations</li></a>
+          <a href="#mainnav"><li>Mission</li></a>
+          <a href="#month"><li>Featured Tea</li></a>
+          <a href="#img"><li>Locations</li></a>
         </ul>
       </nav>
     </div>
 
    <div class="container">
 
-
-    <div class="main">
-      <div id="mission">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
-        Fair Trade, Organic Tea</h4>
+     <div id="mainnav">
+        <div class="main">
+          <div id="mission">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+            Fair Trade, Organic Tea</h4>
+          </div>
+        </div>
       </div>
-    </div>
 
 
-      <div>
-        <h2>Tea of the Month</h2>
-        <p>What's Seeping at The Tea Cozy?</p>
-      </div>
-      <div class="teas">
-        <div class="tea">
-          <img src="./resources/media/img-berryblitz.jpg"/>
-          <h3>Fall Berry Blitz Tea</h3>
+
+       <div id="month">
+          <h2>Tea of the Month</h2>
+          <p>What's Seeping at The Tea Cozy?</p>
         </div>
-        <div class="tea">
-          <img src="./resources/media/img-spiced-rum.jpg"/>
-          <h3>Spiced Rum Tea</h3>
-        </div>
-        <div class="tea">
-          <img src="./resources/media/img-donut.jpg"/>
-          <h3>Seasonal Donuts</h3>
-        </div>
-        <div class="row2">
+        <div class="teas">
           <div class="tea">
-            <img src="./resources/media/img-myrtle-ave.jpg"/>
-            <h3>Myrtle Ave Tea</h3>
+            <img src="./resources/media/img-berryblitz.jpg"/>
+            <h3>Fall Berry Blitz Tea</h3>
           </div>
           <div class="tea">
-            <img src="./resources/media/img-bedford-bizarre.jpg"/>
-            <h3>Bedford Bizarre Tea</h3>
+            <img src="./resources/media/img-spiced-rum.jpg"/>
+            <h3>Spiced Rum Tea</h3>
           </div>
-        </div>
-
-
-       <div class="image">
-          <h2>Locations</h2>
-          <div class="locations">
-            <div class="location">
-              <h3>Downtown</h3>
-              <p>384 West 4th St</p>
-              <p>Suite 108</p>
-              <p>Portland, Maine</p>
+          <div class="tea">
+            <img src="./resources/media/img-donut.jpg"/>
+            <h3>Seasonal Donuts</h3>
+          </div>
+          <div class="row2">
+            <div class="tea">
+              <img src="./resources/media/img-myrtle-ave.jpg"/>
+              <h3>Myrtle Ave Tea</h3>
             </div>
-            <div class="location">
-              <h3>East Bayside</h3>
-              <p>3433 Phisherman's Avenue</p>
-              <p>(Northwest Corner)</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class="location">
-              <h3>Oakdale</h3>
-              <p>515 Crescent Avenue</p>
-              <p>Second Floor</p>
-              <p>Portland, Maine</p>
+            <div class="tea">
+              <img src="./resources/media/img-bedford-bizarre.jpg"/>
+              <h3>Bedford Bizarre Tea</h3>
             </div>
           </div>
-        </div>
+
+
+
+         <div class="image" id="img">
+            <h2>Locations</h2>
+            <div class="locations">
+              <div class="location">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+              </div>
+              <div class="location">
+                <h3>East Bayside</h3>
+                <p>3433 Phisherman's Avenue</p>
+                <p>(Northwest Corner)</p>
+                <p>Portland, Maine</p>
+              </div>
+              <div class="location">
+                <h3>Oakdale</h3>
+                <p>515 Crescent Avenue</p>
+                <p>Second Floor</p>
+                <p>Portland, Maine</p>
+              </div>
+            </div>
+          </div>
+
 
     <div class=".footer">
       <h2>The Tea Cozy</h2>
       <p>contact@theteacozy.com</p>
       <p>917-555-8904</p>
-      <div id="copyright">
-        <h5>copyright The Tea Cozy 2017</h5>
-      </div>
     </div>
 
-
-
   </div>
+  <h5>copyright The Tea Cozy 2017</h5>
   </body>
 </html>
